--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Mealin</title>
 </head>
 <body>
+    <loa-ding></loa-ding>
     <main>
         <svg id="ellipse" xmlns="http://www.w3.org/2000/svg" width="1123" height="1123" viewBox="0 0 1123 1123"><circle cx="561.5" cy="561.5" r="561.5" fill="#511845"/></svg>
         <div class="container">
